--- a/app/package.json
+++ b/app/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~11.2.1",
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
+    "angular-material": "^1.2.2",
     "express": "^4.17.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
